--- a/src/components/settings/settingsModal.css
+++ b/src/components/settings/settingsModal.css
@@ -96,6 +96,13 @@
   column-gap: 10px;
 }
 
+.btd-settings-footer-label {
+  font-size: 14px;
+  margin-right: 10px;
+  color: var(--twitter-blue);
+  opacity: 0.8;
+}
+
 .btd-settings-header {
   grid-area: header;
   padding: 20px;
