--- a/src/components/settings/settingsModal.css
+++ b/src/components/settings/settingsModal.css
@@ -130,6 +130,7 @@
   grid-template-columns: auto 1fr;
   column-gap: 10px;
   padding: 15px 10px;
+  cursor: pointer;
 
   &.active {
     background-color: var(--settings-modal-menu-item-selected);
