--- a/src/components/settings/settingsModal.css
+++ b/src/components/settings/settingsModal.css
@@ -81,7 +81,7 @@
   border-top: 1px solid var(--settings-modal-separator);
 
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   column-gap: 10px;
 }
 
