--- a/src/components/settings/settingsModal.css
+++ b/src/components/settings/settingsModal.css
@@ -1,3 +1,14 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
+*,
+*:after,
+*:before {
+  box-sizing: border-box;
+}
+
 :root {
   --settings-modal-background: #101a27;
   --settings-modal-menu-item-selected: #2e465c;
