--- a/src/components/settings/settingsModal.css
+++ b/src/components/settings/settingsModal.css
@@ -1,3 +1,17 @@
+body,
+#root,
+html {
+  width: 100%;
+  height: 100%;
+  font-size: 14px;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 :root {
   --settings-modal-background: #101a27;
   --settings-modal-menu-item-selected: #2e465c;
@@ -29,7 +43,7 @@
     'footer   footer';
   grid-template-rows: auto 1fr auto;
   grid-template-columns: auto 1fr;
-  border-radius: 10px;
+  border-radius: 0;
   position: absolute;
 
   font-family: system-ui;
