--- a/src/features/mainStyles.css
+++ b/src/features/mainStyles.css
@@ -95,3 +95,10 @@ html.dark .stream-item {
 .app-navigator > a.js-header-action:not(.is-hidden) > .padding-ts {
   padding-top: 0 !important;
 }
+
+p > .emoji {
+  width: 1.3em !important;
+  height: 1.3em !important;
+  padding: 0.2em 0.05em 0 0.1em !important;
+  vertical-align: text-bottom !important;
+}
