--- a/src/features/useOriginalAspectRatio.css
+++ b/src/features/useOriginalAspectRatio.css
@@ -1,4 +1,5 @@
-.btd-aspect-ratio-thumbnail {
+.media-size-medium.btd-aspect-ratio-thumbnail,
+.media-size-large.btd-aspect-ratio-thumbnail {
   height: 0 !important;
   padding-top: calc(var(--btd-thumb-height) / var(--btd-thumb-width) * 100%);
 }
