--- a/src/features/useOriginalAspectRatio.css
+++ b/src/features/useOriginalAspectRatio.css
@@ -1,5 +1,9 @@
+:root {
+  --btd-max-og-ratio-height: 50vh;
+}
+
 .media-size-medium.btd-aspect-ratio-thumbnail,
 .media-size-large.btd-aspect-ratio-thumbnail {
   height: 0 !important;
-  padding-top: calc(var(--btd-thumb-height) / var(--btd-thumb-width) * 100%);
+  padding-top: min(var(--btd-max-og-ratio-height), calc(var(--btd-thumb-height) / var(--btd-thumb-width) * 100%));
 }
