--- a/src/features/mainStyles.css
+++ b/src/features/mainStyles.css
@@ -2,7 +2,7 @@
  * Fullscreen modal styles 
  */
 #btd-fullscreen-portal-root {
-  background: rgba(0, 0, 0, 0.8);
+  background-color: var(--btd-overlay-background);
   color: white;
   position: fixed;
   width: 100%;
@@ -23,8 +23,8 @@
  */
 
 :root {
-  --btd-overlay-background: rgba(0, 0, 0, 0.9);
-  --btd-original-overlay-background: rgba(0, 0, 0, 0.9);
+  --btd-overlay-background: rgba(0, 0, 0, 0.88);
+  --btd-original-overlay-background: rgba(0, 0, 0, 0.88);
 }
 
 html .btd-loaded .overlay,
