--- a/src/features/mainStyles.css
+++ b/src/features/mainStyles.css
@@ -147,3 +147,23 @@ p > .emoji {
 p.js-tweet-text + .js-card-container:not(:empty) {
   padding-top: 10px;
 }
+
+.application .app-title .visible-in-contracted-header .tweetdeck-logo {
+  background-size: 24px;
+  background-position: 50%;
+  background-image: url('../assets/btd-logo-small.png');
+}
+
+.application .app-title .invisible-in-contracted-header {
+  width: 100%;
+  background-repeat: no-repeat;
+  margin-top: 11px;
+  height: 34px;
+  background-size: contain;
+  background-position: center center;
+  background-image: url('../assets/btd-logo.png');
+}
+
+.application .app-title .invisible-in-contracted-header img {
+  display: none;
+}
