use a better way to hide the scrollbars on Webkit/Blink that doesn't break scrolling at the end of a list

--- a/src/features/changeScrollbars.css
+++ b/src/features/changeScrollbars.css
@@ -14,12 +14,13 @@
  */
 
 .btd-loaded:not(.is-firefox)[btd-scrollbar-style='hidden'] {
-  & .js-column-scroller {
-    overflow-y: hidden;
+  & .js-column-scroller.scroll-styled-v::-webkit-scrollbar,
+  & .js-dropdown-container.scroll-styled-v::-webkit-scrollbar {
+    display: none;
   }
 
-  & .js-detail-container {
-    overflow-y: hidden;
+  & .js-app-columns-container.needs-scroll-bottom-offset.scroll-styled-h::-webkit-scrollbar {
+    display: none;
   }
 }
 
