--- a/src/features/badgesOnTopOfAvatars.css
+++ b/src/features/badgesOnTopOfAvatars.css
@@ -1,11 +1,13 @@
 .btd-loaded[btd-badges-top-avatar='true'] {
   & .js-stream-item.btd-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet > .tweet-header .item-img.tweet-img,
-  & .js-stream-item.btd-mini-badge > .js-stream-item-content > .activity-header > .nbfc {
+  & .js-stream-item.btd-mini-badge > .js-stream-item-content > .activity-header > .nbfc,
+  & .js-stream-item.btd-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet-detail .account-summary .item-img {
     position: relative;
   }
 
   & .js-stream-item.btd-mini-badge > .js-stream-item-content > .activity-header > .nbfc::before,
-  & .js-stream-item.btd-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet > .tweet-header .item-img.tweet-img::before {
+  & .js-stream-item.btd-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet > .tweet-header .item-img.tweet-img::before,
+  & .js-stream-item.btd-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet-detail .account-summary .item-img::before {
     content: '';
     line-height: 1;
     position: absolute;
@@ -30,6 +32,11 @@
     right: -3px;
   }
 
+  & .js-stream-item.btd-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet-detail .account-summary .item-img::before {
+    bottom: -3px;
+    right: -3px;
+  }
+
   /*
  small avatar on activities ("Bob liked", "Alice retweeted", "Damien added you to a list", etc)
  */
@@ -45,17 +52,20 @@
   }
 
   /* Hide the vanilla badge in columns */
-  & .stream-item .tweet:not(.txt-mute) > header .sprite-verified-mini {
+  & .stream-item .tweet:not(.txt-mute) > header .sprite-verified-mini,
+  & .js-stream-item .account-link .fullname::before {
     display: none;
   }
 
   & .js-stream-item.btd-mini-badge.btd-verified-badge > .js-stream-item-content > .activity-header > .nbfc::before,
-  & .js-stream-item.btd-badge.btd-verified-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet > .tweet-header .item-img.tweet-img::before {
+  & .js-stream-item.btd-badge.btd-verified-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet > .tweet-header .item-img.tweet-img::before,
+  & .js-stream-item.btd-badge.btd-verified-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet-detail .account-summary .item-img::before {
     background-image: url('../assets/verified-icon.svg');
   }
 
   & .js-stream-item.btd-mini-badge.btd-translator-badge > .js-stream-item-content > .activity-header > .nbfc::before,
-  & .js-stream-item.btd-badge.btd-translator-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet > .tweet-header .item-img.tweet-img::before {
+  & .js-stream-item.btd-badge.btd-translator-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet > .tweet-header .item-img.tweet-img::before,
+  & .js-stream-item.btd-badge.btd-translator-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet-detail .account-summary .item-img::before {
     background-image: url('../assets/translator-icon.svg');
   }
 }
