fix tweet menu in light mode with modern overlays

--- a/src/features/modernOverlays.css
+++ b/src/features/modernOverlays.css
@@ -9,7 +9,7 @@
     justify-content: space-between;
   }
 
-  & .js-mediatable .js-modal-panel .med-tweet .js-tweet .tweet-footer .tweet-actions a {
+  & .js-mediatable .js-modal-panel .med-tweet .js-tweet .tweet-footer .tweet-actions > .tweet-action-item > .tweet-action {
     color: white !important;
   }
 
