--- a/src/features/collapseDms.css
+++ b/src/features/collapseDms.css
@@ -1,40 +1,22 @@
-[btd-collapse-dms='true'] .tweet-message .l-table {
-  display: none !important;
-}
+[btd-collapse-dms='true'] .js-stream-item:not(.is-unread) .tweet-message {
+  line-height: 1.6em !important;
+  padding-left: 30px;
 
-[btd-collapse-dms='true'] .tweet-message .tweet-avatar,
-[btd-collapse-dms='true'] .tweet-message .tweet-img {
-  width: 24px !important;
-  height: 24px !important;
-}
+  & .tweet-header + .l-table {
+    display: none !important;
+  }
 
-[btd-collapse-dms='true'] .tweet-message .tweet-img.btd-is-verified::before {
-  transform: scale(0.8);
-  bottom: -8px !important;
-}
+  & .tweet-header > .tweet-timestamp {
+    margin-top: 4px !important;
+  }
 
-[btd-collapse-dms='true'] .is-unread .tweet-message .l-table {
-  display: table !important;
-  vertical-align: middle;
-}
+  & .tweet-header > .js-conversation-header > .account-link > .obj-left,
+  & .tweet-header > .js-conversation-header > .account-link > .obj-left .tweet-avatar {
+    width: 24px !important;
+    height: 24px !important;
+  }
 
-[btd-collapse-dms='true'] .tweet-message .conversation-indicator {
-  display: none;
-}
-
-[btd-collapse-dms='true'] .tweet-message .nbfc {
-  margin-left: -15px;
-  line-height: 1.6em;
-}
-
-[btd-collapse-dms='true'] .tweet-message .nbfc .account-link {
-  margin-top: 3px;
-}
-
-[btd-collapse-dms='true'] .tweet-message .tweet-timestamp {
-  margin-top: 3px;
-}
-
-[btd-collapse-dms='true'] .tweet-message .tweet-text {
-  margin-left: -24px;
+  & .tweet-header > .js-conversation-header > .account-link > .obj-left {
+    margin-left: -30px;
+  }
 }
