don't override unread DM styles

--- a/src/features/lightsOut.css
+++ b/src/features/lightsOut.css
@@ -11,10 +11,10 @@ html.dark body[btd-theme='old-grey'] {
   & .column-header,
   & .column-header-temp,
   & .column-background-fill,
-  & .stream-item,
+  & .stream-item:not(.is-unread),
   & .column-options .button-tray,
   & .facet-type.is-active,
-  & .app-content .stream-item,
+  & .app-content .stream-item:not(.is-unread),
   & .app-content .column-message,
   & .app-content .column-header,
   & .app-content .column-header-temp,
