Old grey tweaks

--- a/src/features/lightsOut.css
+++ b/src/features/lightsOut.css
@@ -78,8 +78,8 @@ html.dark body[btd-theme='super-dark'] {
 }
 
 html.dark body[btd-theme='old-grey'] {
-  --btd-theme-background: hsl(210, 6%, 17%);
-  --btd-theme-background-lighter: #373a3e;
+  --btd-theme-background: #1c1f21;
+  --btd-theme-background-lighter: #242b30;
   --btd-theme-btn-hover: #2b2b2b;
 
   & .app-content,
@@ -87,11 +87,11 @@ html.dark body[btd-theme='old-grey'] {
     background: #14171a;
   }
 
-  /* & .app-content .column-header,
+  & .app-content .column-header,
   & .column-nav-item,
   & .app-header,
   & .app-title,
   & .app-navigator {
     background: var(--btd-theme-background-lighter);
-  } */
+  }
 }
