affect horizontal scrollbar with thin scrollbars on Firefox
Fixes https://github.com/eramdam/BetterTweetDeck/issues/542

--- a/src/features/changeScrollbars.css
+++ b/src/features/changeScrollbars.css
@@ -5,7 +5,8 @@
   scrollbar-width: none;
 }
 
-.btd-loaded.is-firefox[btd-scrollbar-style='slim'] .column-scroller {
+.btd-loaded.is-firefox[btd-scrollbar-style='slim'] .column-scroller,
+.btd-loaded.is-firefox[btd-scrollbar-style='slim'] .js-app-columns-container.needs-scroll-bottom-offset.scroll-styled-h {
   scrollbar-width: thin;
 }
 
