--- a/src/features/emojiPicker.css
+++ b/src/features/emojiPicker.css
@@ -568,3 +568,8 @@ html.dark .btd-loaded {
     transform: scale(1.1);
   }
 }
+
+/* Allow room for emoji button in composer */
+body[btd-emoji-picker='true'] .js-drawer .js-compose-text {
+  width: calc(100% - 26px) !important;
+}
