--- a/src/features/renderCardsInColumns.css
+++ b/src/features/renderCardsInColumns.css
@@ -1,4 +1,8 @@
 [btd-render-cards='true'] .js-column:is([data-column-size='medium'], [data-column-size='small'], [data-column-size='large']) {
+  /* Cards act weird and don't load in Collections columns */
+  &[data-column-type='col_customtimeline'] .js-tweet[btd-card] .js-card-container {
+    min-height: initial !important;
+  }
   /* Article preview, large */
   & .js-tweet[btd-card='summary_large_image'] .js-card-container {
     min-height: 206px;
